project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      labels:
        app: project
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: image-claim
      containers:
        - name: project
          image: pekkamattinen/project:0072
          volumeMounts:
            - mountPath: /opt/app/images
              name: shared-image
        - name: project-api
          image: pekkamattinen/api-project:01
