project/manifests/psql_stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: psql-ss
  namespace: project
spec:
  serviceName: psql-svc
  replicas: 2
  selector:
    matchLabels:
      app: psqlapp
  template:
    metadata:
      labels:
        app: psqlapp
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 100Mi
