project/manifests/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-api-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: project-api
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 4000
