project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: project
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
